# IIL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: clang-format.yml  tests.yml
benchmarks/lexer_benchmark/: benchmarkSwitch.cpp
docs/: DOCUMENTATION.MD
examples/: README.md
include/IIL/: IIL.hpp  types.hpp
include/IIL/error/: error.hpp
include/IIL/exceptions/: evalTime.hpp  exceptions.hpp  internalEval.hpp  lexTime.hpp  parseTime.hpp  runTimeWarning.hpp
include/IIL/interpreter/: interpreter.hpp
include/IIL/lexer/: keyEval.hpp  stringHash.hpp  stringPool.hpp  tokenization.hpp  tokens.hpp
include/IIL/lexer/errors/: lexerError.hpp
include/IIL/parser/: AST.hpp  Expr.hpp  README.md  arena.cpp  arena.hpp  helping_notes.txt  parse.hpp  parsing.hpp
include/IIL/parser/ast/: ASTNode.hpp
include/IIL/parser/error/: error.hpp
scripts/tests/: build_lexer_arithmetic_operators_test.cmd  build_lexer_arithmetic_operators_test.sh  build_lexer_comparison_operators_test.cmd  build_lexer_comparison_operators_test.sh  build_lexer_operators_test.cmd  build_lexer_test.cmd  build_lexer_test.sh
src/: IIL.cpp  main.cpp
src/error/: error.cpp
src/exceptions/: evalTime.cpp  exceptions.cpp  internalEval.cpp  lexTime.cpp  parseTime.cpp  runTimeWarning.cpp
src/interpreter/: interpreter.cpp
src/lexer/: keyEval.cpp  stringPool.cpp  tokenization.cpp  tokens.cpp
src/lexer/utils/: isDelimiter.cpp  isNumber.cpp  isNumber.hpp  isSkippable.cpp  shift.cpp  shift.hpp
src/parser/: AST.cpp  arena.cpp  expr.cpp  parse.cpp  parsing.cpp  sync.cpp
src/parser/error/: error.cpp
src/parser/errors/: errorRoutines.cpp  parserError.cpp
src/parser/errors/include/: errorRoutines.hpp
src/parser/utils/: helperRoutines.cpp  helperRoutines.hpp
src/parser/utils/include/: helperRoutines.hpp
stdlib/REPL/: CMakeLists.txt  README.md
stdlib/REPL/src/: IILREPL.hpp  listener.cpp  main.cpp  utils.hpp
stdlib/REPL/tests/: exits.cpp
tests/: CMakeLists.txt  CmakeLists.txt  lexer_test.cpp
tests/lexer_tests/: arithmeticOperators.cpp  comparisonOperators.cpp  delimiterTest.cpp  handlesMultiLineComments.cpp  handlesSingleLineComments.cpp  handlesWhiteSpace.cpp  identifierTest.cpp  keywordTest.cpp  numberTest.cpp  stringTest.cpp  toksSeperatedByDelimiterTest.cpp
